# useful-rust-modules

./: .gitignore  Cargo.toml  libtypes-8a55ce23d1ca64c4.rlib  libtypes-8a55ce23d1ca64c4.rmeta  output-8a55ce23d1ca64c4.d  output-8a55ce23d1ca64c4.s
crates/cuda_subst/: Cargo.toml  build.rs
crates/cuda_subst/cuda/: score_keys.cu
crates/cuda_subst/src/: lib.rs  main.rs
crates/minirand/: Cargo.toml
crates/minirand/examples/: random_choice.rs  random_numbers.rs
crates/minirand/examples/helpers/: mod.rs
crates/minirand/examples/helpers/display/: mod.rs  table.rs
crates/minirand/src/: lib.rs
crates/minirand/src/cycles/: helpers.rs  mod.rs
crates/minirand/src/int/: mod.rs  traits.rs
crates/minirand/tests/: check_distribution.rs
crates/minirand/tests/helpers/: mod.rs  sheets.rs
crates/minirand/tests/outputs/: combined-outputs.xml  f32_distribution.csv  u8.csv
crates/multi-asm/: Cargo.toml  README.md  build.rs
crates/multi-asm/asm/aarch64/windows/: iseven.asm  print.asm  qsqrt.asm
crates/multi-asm/asm/x86/linux/: iseven.s  print.s
crates/multi-asm/asm/x86/windows/: iseven.asm  oldqsqrt.asm  print.asm  qsqrt.asm
crates/multi-asm/asm/x86_64/linux/: iseven.s  print.s
crates/multi-asm/asm/x86_64/windows/: iseven.asm  print.asm  qsqrt.asm
crates/multi-asm/examples/: sqrt.rs
crates/multi-asm/src/: lib.rs
crates/panic/: Cargo.toml
crates/panic/src/: lib.rs  linux.rs  windows.rs
crates/sizer/: Cargo.toml
crates/system_specs/: Cargo.toml
crates/system_specs/examples/: demo.rs
crates/system_specs/src/: lib.rs
crates/system_specs/src/cpu/: mod.rs  windows.rs
crates/system_specs/src/disks/: mod.rs  windows.rs
crates/system_specs/src/memory/: mod.rs
crates/system_specs/src/memory/ram/: mod.rs  windows.rs
crates/system_specs/src/memory/swap/: linux.rs  mod.rs  windows.rs
crates/types/: Cargo.toml
crates/types/examples/: strings.rs
crates/types/src/: lib.rs
crates/types/src/ints/: mod.rs
crates/types/src/string/: mod.rs  str.rs  string.rs
crates/utils/: Cargo.toml
crates/utils/scripts/: check_features.rs
crates/utils/src/: lib.rs
crates/utils/src/collections/: collect.rs  mod.rs
crates/utils/tests/: music_files.rs
