[package]
name = "panics"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "dylib", "staticlib"]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading", # for `ExitProcess`
    "Win32_System_Console", # for `WriteConsoleA` etc.
] }