[package]
name = "utils"
edition = "2024"




[features]
default = ["appdata-all", "collection", "user-dirs"]

music = []
documents = []
downloads = []
pictures = []
videos = []
user-dirs = ["music", "documents", "downloads", "pictures", "videos"]

music-collection = ["music"]
documents-collection = ["documents"]
downloads-collection = ["downloads"]
pictures-collection = ["pictures"]
videos-collection = ["videos"]
collection = ["music-collection", "documents-collection", "downloads-collection", "pictures-collection", "videos-collection"]

appdata = []
local-appdata = []
local-low-appdata = []
local-roaming-appdata = []
appdata-all = ["appdata", "local-appdata", "local-low-appdata", "local-roaming-appdata"]

# The Following are for Rosary Apps
rosary = ["rosary-collection", "music"]
rosary-collection = []

# The Following 
check-features = ["dep:serde", "dep:serde_json"]
test = []
[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }


[[bin]]
name = "check_features"
path = "scripts/check_features.rs"
required-features = ["check-features"]


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = "fat" # Enables link-time-optimizations.
opt-level = 3
# panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
overflow-checks = false
incremental = false